--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cinecops</title>
-    <link rel="stylesheet" href="/assets/css/style.css">
+    <link rel="stylesheet" href="./assets/css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
 </head>
 
@@ -29,15 +29,15 @@
             <div class="carousel">
                 <div class="banner active">
                     <!-- Conteúdo do primeiro banner -->
-                    <img src="assets/img/joker-banner-joaquin-phoenix.jpg" alt="Banner 1">
+                    <img src="./assets/img/joker-banner-joaquin-phoenix.jpg" alt="Banner 1">
                 </div>
                 <div class="banner">
                     <!-- Conteúdo do segundo banner -->
-                    <img src="/assets/img/Soul-banner.jpg" alt="Banner 2">
+                    <img src="./assets/img/Soul-banner.jpg" alt="Banner 2">
                 </div>
                 <div class="banner">
                     <!-- Conteúdo do terceiro banner -->
-                    <img src="/assets/img/61dcf2b4e0b6b6ee6099e20049a70717.jpg" alt="Banner 3">
+                    <img src="./assets/img/61dcf2b4e0b6b6ee6099e20049a70717.jpg" alt="Banner 3">
                 </div>
                 <!-- Adicione mais banners conforme necessário -->
                 <div class="carousel-navigation">
