Subindo banners + botão

--- a/index.html
+++ b/index.html
@@ -25,8 +25,28 @@
         </nav>
     </header>
     <main>
+        <div class="carousel">
+            <div class="banner active">
+              <!-- Conteúdo do primeiro banner -->
+              <img src="./assets/img/61dcf2b4e0b6b6ee6099e20049a70717.jpg" alt="Banner 1">
+              <button class="btn-banner">Compra já seu ingresso!</button>
+            </div>
+            <div class="banner">
+              <!-- Conteúdo do segundo banner -->
+              <img src="./assets/img/banner-homem-aranha.jpeg" alt="Banner 2">
+              <button class="btn-banner">Compra já seu ingresso!</button>
+            </div>
+            <div class="banner">
+              <!-- Conteúdo do terceiro banner -->
+              <img src="./assets/img/Soul-banner.jpg" alt="Banner 3">
+              <button class="btn-banner">Compra já seu ingresso!</button>
+            </div>
+            <!-- Adicione mais banners conforme necessário -->
         
+            <!-- Setas de navegação -->
+            
+          </div>
     </main>
+    <script src="./script.js"></script>
 </body>
-<script src="script.js"></script>
 </html>
