--- a/index.html
+++ b/index.html
@@ -2,51 +2,48 @@
 <html lang="pt-br">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cinecops</title>
-    <link rel="stylesheet" href="./assets/css/style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Cinecops</title>
+  <link rel="stylesheet" href="./assets/css/style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+  <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
+    crossorigin="anonymous">
+    </script>
+  <script>
+    $(function () {
+      $("#header").load("header.html");
+      $("#footer").load("./pages/footer.html");
+    });
+  </script>
 </head>
 
 <body>
-    <header>
-        <div class="logo-container">
-            <img src="assets/img/logo_transparent.png" alt="">
-        </div>
-        <nav class="menu">
-            <ul>
-                <li>Home</li>
-                <li>Ingressos</li>
-                <li>Cinemas</li>
-                <li>Cadastro</li>
-                <li>Ajuda</li>
-            </ul>
-        </nav>
-    </header>
-    <main>
-        <div class="carousel">
-            <div class="banner active">
-              <!-- Conteúdo do primeiro banner -->
-              <img src="./assets/img/61dcf2b4e0b6b6ee6099e20049a70717.jpg" alt="Banner 1">
-              <button class="btn-banner">Compra já seu ingresso!</button>
-            </div>
-            <div class="banner">
-              <!-- Conteúdo do segundo banner -->
-              <img src="./assets/img/banner-homem-aranha.jpeg" alt="Banner 2">
-              <button class="btn-banner">Compra já seu ingresso!</button>
-            </div>
-            <div class="banner">
-              <!-- Conteúdo do terceiro banner -->
-              <img src="./assets/img/Soul-banner.jpg" alt="Banner 3">
-              <button class="btn-banner">Compra já seu ingresso!</button>
-            </div>
-            <!-- Adicione mais banners conforme necessário -->
-        
-            <!-- Setas de navegação -->
-            
-          </div>
-    </main>
-    <script src="./script.js"></script>
+  <div id="header"></div>
+  <main>
+    <div class="carousel">
+      <div class="banner active">
+        <!-- Conteúdo do primeiro banner -->
+        <img src="./assets/img/61dcf2b4e0b6b6ee6099e20049a70717.jpg" alt="Banner 1">
+        <button class="btn-banner">Compra já seu ingresso!</button>
+      </div>
+      <div class="banner">
+        <!-- Conteúdo do segundo banner -->
+        <img src="./assets/img/banner-homem-aranha.jpeg" alt="Banner 2">
+        <button class="btn-banner">Compra já seu ingresso!</button>
+      </div>
+      <div class="banner">
+        <!-- Conteúdo do terceiro banner -->
+        <img src="./assets/img/Soul-banner.jpg" alt="Banner 3">
+        <button class="btn-banner">Compra já seu ingresso!</button>
+      </div>
+      <!-- Adicione mais banners conforme necessário -->
+
+      <!-- Setas de navegação -->
+
+    </div>
+  </main>
+  <script src="./script.js"></script>
 </body>
+
 </html>
