Adicionando link para página de ingresso
Adicionando link para página de ingresso

--- a/pages/header.html
+++ b/pages/header.html
@@ -181,7 +181,7 @@
                 <a href="/index.html">
                     <li>Home</li>
                 </a>
-                <a href="#">
+                <a href="/header.html">
                     <li>Ingressos</li>
                 </a>
                 <a href="#">
