--- a/header.html
+++ b/header.html
@@ -181,7 +181,7 @@
                 <a href="/index.html">
                     <li>Home</li>
                 </a>
-                <a href="#">
+                <a href="/pages/ingressos.html">
                     <li>Ingressos</li>
                 </a>
                 <a href="#">
