Ajustando icone header e adicionando divs de filmes nos ingressos

--- a/pages/header.html
+++ b/pages/header.html
@@ -135,7 +135,7 @@
 </head>
 <header>
     <nav>
-        <img class="logo" src="assets/img/logo_transparent.png" alt="" srcset="">
+        <img class="logo" src="../assets/img/logo_transparent.png" alt="" srcset="">
         <div class="mobile-menu">
             <div class="line1"></div>
             <div class="line2"></div>
