Ajustando as divs para a

--- a/pages/filme-1.html
+++ b/pages/filme-1.html
@@ -43,14 +43,14 @@
                     <h2>Horários:</h2>
                 </div>
                 <div class="time-container">
-                    <div class="time">12h10</div>
-                    <div class="time">12h50</div>
-                    <div class="time">13h40</div>
-                    <div class="time">15h20</div>
-                    <div class="time">16h10</div>
-                    <div class="time">16h50</div>
-                    <div class="time">21h00</div>
-                    <div class="time">23h00</div>
+                    <a class="time">12h10</a>
+                    <a class="time">12h50</a>
+                    <a class="time">13h40</a>
+                    <a class="time">15h20</a>
+                    <a class="time">16h10</a>
+                    <a class="time">16h50</a>
+                    <a class="time">21h00</a>
+                    <a class="time">23h00</a>
                 </div>
             </div>
         </section>
